<resources>

    <string name="app_name">OC UI F12</string>
    <string name="email">email</string>
    <string name="enter_email">Enter your email</string>
    <string name="button_signup">sign up</string>
    <string name="enter_password">Enter your password</string>
    <string name="password">password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="goArrow">Go arrow</string>
    <string name="bar">Separator bar</string>
    <string name="login">login</string>
    <string name="search">search</string>
    <string name="moderator">moderator</string>
    <string name="search_hint">Search Contacts</string>
    <string name="resetNotify">Reset password email sent</string>
    <string name="opencomm">OpenComm</string>
    <string name="dashboard_confinfo">Conference Info</string>
    <string name="dashboard_confs">Conferences</string>
    <string name="side_chat_text">invited you to a side chat</string>
    <string name="dashboard_contacts">Contacts</string>
    <string name="dashboard_profile">My Profile</string>
    <string name="reset_password">reset password</string>
    <string name="sign_up">sign up</string>
    <string name="remove">remove</string>
    <string name="send_email">send email</string>
    <string name="sidechat">sidechat</string>
    <string name="open_right">open right</string>
    <string name="side_chat_invite">contact name</string>
    <string name="open_left">open left</string>
    <string name="mainChat">mainChat</string>
    <string name="end">end</string>
    <string name="leave">leave</string>
    <string name="send">send</string>
    <string name="conference">conference</string>
    <string name="desc">Generic description for image</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_splash_view">SplashView</string>
    <string name="profile">profile</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="add">add</string>
    <string name="conferenceTitle">conferenceTitle</string>
    <string name="startTime">startTime</string>
    <string name="invited">invited</string>
    <string name="loading_extended">loading&#8230;</string>
    <string name="todo_need_to_write_a_content_desc">TODO - Need to write a content desc</string>
    <string name="new_account">new account</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="confirm_password">confirm password</string>
    <string name="title">title</string>
    <string name="photo">photo</string>
    <string name="invalid_first_name">Incorrect First Name</string>
    <string name="invalid_last_name">Incorrect Last Name</string>
    <string name="invalid_email">Incorrect Email</string>
    <string name="contacts">contacts</string>
    <string name="contacts_back_button_desc">Back to Dashboard</string>
    <string name="contacts_search_button_desc">Search Contacts</string>
    <string name="contact_search_title">contacts</string>
    <string name="contact_name_sample">A Contact Name</string>
    <string name="contact_default_picture_desc">Default Picture</string>
    <string name="add_conference_button_desc">Create Conference</string>
    <string name="conference_scheduling_conference_text">conferences</string>
    <string name="conference_card_back_button_desc">Back to Conference Scheduling Page</string>
    <string name="change_date_left_arrow_desc">Previous Date</string>
    <string name="change_date_right_arrow_desc">Next Date</string>
    <string name="conference_open_icon">Open More Conference Information</string>
    <string name="happening_now">happening now</string>
    <string name="upcoming">upcoming</string>
    <string name="go_to_conference_button_desc">Go to conference</string>
    <string name="invite">invite</string>
    <string name="sendhere">send here</string>
    <string name="description">description</string>
    <string name="date_and_time">date &amp; time</string>
    <string name="recurring">recurring</string>
    <string name="invited_by">invited_by</string>
    <string name="attendees">attendees</string>
    <string name="to">to</string>
    <string name="accept">accept</string>
    <string name="accept_desc">Accept the invite to this conference</string>
    <string name="decline_desc">Decline the invite to this conference</string>
    <string name="decline">decline</string>
    <string name="enter_conference">enter conference</string>
    <string name="enter_conference_desc">Enter Conference</string>
    <string name="email_sample">jimmyjoe@jimmyjoe.com</string>
    <string name="phone_number">phone number</string>
    <string name="phone_number_sample">(555) 555–5555</string>
    <string name="previous_conferences">previous conferences</string>
    <string name="conference_sample">sample conference</string>
    <string name="block">block</string>
    <string name="invalid_password">Incorrect Password</string>
    <string name="password_dont_match">Passwords do not match</string>
    <string name="empty_field_error">cannot be empty</string>
    <string name="invalid_title">Incorrect title </string>
    <string name="notifications">notifications</string>
    <string name="my_account">my account</string>
    <string name="name">name</string>
    <string name="name_sample">Joseph Levitt</string>
    <string name="title_sample">Actor</string>
    <string name="password_sample">********</string>
    <string-array name="overflow_dashboard">
        <item>logout</item>
    </string-array>
    <string-array name="overflow_notifications">
        <item >account</item>
        <item >contacts</item>
    </string-array>
    <string-array name="overflow_contacts">
        <item >conferences</item>
        <item >account</item>
    </string-array>
    <string-array name="overflow_myaccount">
        <item >conferences</item>
        <item >contacts</item>
    </string-array>

</resources>