<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="42.67dp"
        android:orientation="horizontal"
        android:background="@color/dark_grey">
        <ImageButton android:id="@+id/contact_card_back_button"
            android:layout_width="10.67dp"
            android:layout_height="14dp"
            android:layout_marginTop="14.67dp"
            android:layout_marginLeft="10.67dp"
            android:src="@drawable/action_arrow"
            android:contentDescription="@string/desc"
            android:tint="@color/white"
            android:scaleType="centerInside"
            android:background="@color/dark_grey"
            android:onClick="backButtonClicked"/>
        <TextView android:id="@+id/contact_card_name"
            android:layout_width="226dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8.33dp"
            android:layout_marginLeft="6.33dp"
            android:text="@string/contact_name_sample"
            android:textColor="@color/blue"
            android:textSize="20dp"/>
        <ImageButton android:id="@+id/contact_card_add"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="11.67dp"
            android:src="@drawable/accept_plus"
            android:contentDescription="@string/desc"
            android:scaleType="centerInside"
            android:background="@color/dark_grey"
            android:onClick="addButtonClicked"/>
        <ImageButton android:id="@+id/contact_card_overflow"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="3.67dp"
            android:src="@drawable/navigation_action_overflow"
            android:contentDescription="@string/desc"
            android:scaleType="centerInside"
            android:background="@color/dark_grey"
            android:onClick="overflowButtonClicked"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="432dp"
        android:orientation="vertical"
        android:background="@color/black">
        <ImageView android:id="@+id/contact_card_picture"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="34dp"
            android:src="@drawable/contact_default_image"
            android:contentDescription="@string/desc"
            android:scaleType="centerInside"
            android:background="@color/black"/>
        <TextView android:id="@+id/contact_card_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="52dp"
            android:layout_marginTop="10.67dp"
            android:text="@string/email"
            android:textSize="15dp"
            android:textColor="@color/light_grey"/>
        <TextView android:id="@+id/contact_card_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="52dp"
            android:layout_marginTop="1.5dp"
            android:text="@string/email_sample"
            android:textSize="15dp"
            android:textColor="@color/white"/>
        <TextView android:id="@+id/contact_card_phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="52dp"
            android:layout_marginTop="1.5dp"
            android:text="@string/phone_number"
            android:textSize="15dp"
            android:textColor="@color/light_grey"/>
        <TextView android:id="@+id/contact_card_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="52dp"
            android:layout_marginTop="1.5dp"
            android:text="@string/phone_number_sample"
            android:textSize="15dp"
            android:textColor="@color/white"/>
        <TextView android:id="@+id/contact_card_conferences_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="52dp"
            android:layout_marginTop="1.5dp"
            android:text="@string/previous_conferences"
            android:textSize="15dp"
            android:textColor="@color/light_grey"/>
        <TextView android:id="@+id/contact_card_conference1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="52dp"
            android:layout_marginTop="1.5dp"
            android:text="@string/conference_sample"
            android:textSize="15dp"
            android:textColor="@color/white"/>
        <TextView android:id="@+id/contact_card_conference2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="52dp"
            android:layout_marginTop="1.5dp"
            android:text="@string/conference_sample"
            android:textSize="15dp"
            android:textColor="@color/white"/>
        <TextView android:id="@+id/contact_card_conference3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="52dp"
            android:layout_marginTop="1.5dp"
            android:text="@string/conference_sample"
            android:textSize="15dp"
            android:textColor="@color/white"/>
    </LinearLayout>
    
    <Button android:id="@+id/contact_card_block_button"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:text="@string/block"
        android:textSize="15dp"
        android:textColor="@color/orange"
        android:background="@color/darker_grey"
        android:onClick="blockButtonClicked"/>
</LinearLayout>