<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/my_profile_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/my_profile_actionbar"
        android:layout_width="fill_parent"
        android:layout_height="42.66dp"
        android:background="@color/grey_thirtythree" >

        <ImageView
            android:id="@+id/my_profile_backIcon"
            android:layout_width="8.5dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10.66dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/desc"
            android:onClick="back"
            android:src="@drawable/action_back" />

        <TextView
            android:id="@+id/my_profile_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="14dp"
            android:layout_marginLeft="24dp"
            android:text="@string/my_profile"
            android:textColor="@color/blue_title"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/my_profile_overflowIcon"
            android:layout_width="5.33dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="24dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/desc"
            android:onClick="overflow"
            android:src="@drawable/action_overflow" />

        <ImageView
            android:id="@+id/my_profile_editIcon"
            android:layout_width="21.33dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:layout_toLeftOf="@id/my_profile_overflowIcon"
            android:adjustViewBounds="true"
            android:contentDescription="@string/desc"
            android:onClick="edit"
            android:src="@drawable/action_edit" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/my_profile_actionbar"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/my_profile_photo"
            android:layout_width="161.33dp"
            android:layout_height="161.33dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/desc"
            android:scaleType="fitXY"
            android:src="@drawable/contact_default_image" />

        <TextView
            android:id="@+id/my_profile_name_label"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15.07dp"
            android:text="@string/name"
            android:textColor="@color/grey_eightyseven"
            android:textSize="18.66sp" />

        <TextView
            android:id="@+id/my_profile_name_content"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="1.5dp"
            android:text="@string/name_sample"
            android:textColor="@color/white_ffour"
            android:textSize="18.66sp" />

        <TextView
            android:id="@+id/my_profile_title_label"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="3.5dp"
            android:text="@string/title"
            android:textColor="@color/grey_eightyseven"
            android:textSize="18.66sp" />

        <TextView
            android:id="@+id/my_profile_title_content"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="1.5dp"
            android:text="@string/title_sample"
            android:textColor="@color/white_ffour"
            android:textSize="18.66sp" />

        <TextView
            android:id="@+id/my_profile_email_label"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="3.5dp"
            android:text="@string/email"
            android:textColor="@color/grey_eightyseven"
            android:textSize="18.66sp" />

        <TextView
            android:id="@+id/my_profile_email_content"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="1.5dp"
            android:text="@string/email_sample"
            android:textColor="@color/white_ffour"
            android:textSize="18.66sp" />

        <TextView
            android:id="@+id/my_profile_password_label"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="3.5dp"
            android:text="@string/password"
            android:textColor="@color/grey_eightyseven"
            android:textSize="18.66sp" />

        <TextView
            android:id="@+id/my_profile_password_content"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="1.5dp"
            android:text="@string/password_sample"
            android:textColor="@color/white_ffour"
            android:textSize="18.66sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/my_profile_overflowList"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/my_profile_actionbar"
        android:layout_marginRight="10.66dp"
        android:background="@color/black"
        android:divider="@color/black"
        android:dividerHeight="0.66dp"
        android:listSelector="@drawable/selector_bg_list"
        android:padding="0.66dp"
        android:visibility="invisible" />

</RelativeLayout>