<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/contact_search_entire_screen"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black_light" >

    <RelativeLayout
        android:id="@+id/contactSearch_titleBar"
        android:layout_width="fill_parent"
        android:layout_height="42.67dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/dark_grey"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/contactSearch_overflow"
            android:layout_width="5.33dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/desc"
            android:onClick="overflow"
            android:src="@drawable/action_overflow" />

        <ImageView
            android:id="@+id/left_arrow_icon"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10.7dp"
            android:clickable="true"
            android:contentDescription="@string/contacts_back_button_desc"
            android:onClick="backButtonPressed"
            android:src="@drawable/action_arrow" />

        <Button
            android:id="@+id/contactSearch_add_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/left_arrow_icon"
            android:background="@color/grey_half_opacity"
            android:gravity="center_vertical"
            android:text="@string/search"
            android:textColor="@color/blue_contacts_page_title"
            android:textSize="24sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/contactsSearch_searchLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/contactSearch_titleBar"
        android:layout_marginLeft="46.67dp"
        android:layout_marginTop="32dp" >

        <RelativeLayout
            android:id="@+id/contact_search_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="46.67dp"
            android:background="@color/white" >

            <EditText
                android:id="@+id/search_contact_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/contact_search_search_button"
                android:ems="10"
                android:hint="@string/search_hint"
                android:inputType="textPersonName"
                android:textColorHint="@color/black" />

            <ImageButton
                android:id="@+id/contact_search_search_button"
                android:layout_width="41.33dp"
                android:layout_height="33dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginTop="8dp"
                android:background="@color/white"
                android:contentDescription="@string/desc"
                android:scaleType="fitCenter"
                android:src="@drawable/action_search" />
        </RelativeLayout>

        <ListView
            android:id="@+id/contact_search_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/contact_search_bar"
            android:layout_marginTop="10dp"
            android:background="@color/black_light"
            android:clickable="true"
            android:descendantFocusability="blocksDescendants"
            android:divider="@color/bar_separating_listview"
            android:dividerHeight="2dp"
            android:smoothScrollbar="true"
            android:visibility="invisible" >

        </ListView>
    </RelativeLayout>

</RelativeLayout>